# CGSceneModelingProject

./: CMakeLists.txt
src/: editor.cpp  editor.h  main.cpp  primitive_factory.cpp  primitive_factory.h  render_flag.cpp  render_flag.h  star.cpp  star.h
src/base/: camera.cpp  frustum.h  light.h  model.cpp  model.h  object.cpp  object.h  skybox.cpp  texture_cubemap.cpp  utils.cpp  utils.h
src/shader/: extract_bright_color.frag  gaussian_blur.frag  geometry.frag  ssao.frag  ssao_lighting.frag
